# AI-Execute-Services

./: .dockerignore  .env.apisource  .env.example  .env.search  .env.search.example  .flake8  .gitignore  .gitignore.test  .pre-commit-config.yaml  .readthedocs.yaml  ALL_TOOLS_LIST.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_CHECK_UPDATE_SUMMARY.md  Dockerfile  GIT_WORKFLOW.md  LICENSE  LICENSE_HEADER.txt  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISH.md  QA_1_COMPLETION_REPORT.md  README.md  STEALTH_MODE_IMPLEMENTATION_SUMMARY.md  SYSTEM_DEPENDENCIES_SUMMARY.md  TEST_COMPLETION_SUMMARY.md  TEST_RUN_INSTRUCTIONS.md  TOOL_SCHEMA_ANALYSIS.md  TOOL_SCHEMA_COVERAGE_CHECKLIST.md  analyze_tool_schemas.py  celery_worker.py  check_tool_schemas.py  config_optimization_recommendations.md  dependency_report.txt  docker-compose.yml  env.PostgreSQL.template  knowledge_database.db  mypy.ini  pyproject.toml  pytest.ini  (+14 more)
.github/workflows/: README.md  ci-core-slim.yml  ci-e2e.yml  ci-integration.yml  ci-quality.yml  ci-unit.yml  publish-to-pypi.yml  publish-to-testpypi.yml
aiecs/: __init__.py  __main__.py  aiecs_client.py  main.py
aiecs/application/: __init__.py
aiecs/common/: __init__.py
aiecs/config/: __init__.py  config.py  graph_config.py  llm_models.yaml  skills_config.py  tool_config.py
aiecs/core/: __init__.py
aiecs/docs/: gvr_consumer_api.md  gvr_dawp_result.md  gvr_gate_semantics.md  gvr_goal_graph_mapping.md  gvr_loop_detection.md  gvr_recovery_semantics.md  gvr_verdict_field_mapping.md  migration_2.1.0rc4_to_ga.md
aiecs/domain/: __init__.py
aiecs/host/: __init__.py
aiecs/infrastructure/: __init__.py
aiecs/llm/: README.md  __init__.py  base_client.py  client_factory.py  client_resolver.py  protocols.py
aiecs/scripts/: DEPENDENCY_SYSTEM_SUMMARY.md  README_DEPENDENCY_CHECKER.md  __init__.py  dependency_checker.py  dependency_fixer.py  download_nlp_data.py  quick_dependency_check.py
aiecs/tasks/: __init__.py  worker.py
aiecs/tools/: README.md  __init__.py  _builtin_tool_deprecation.py  base_tool.py  langchain_adapter.py  schema_generator.py  temp_file_manager.py
aiecs/utils/: LLM_output_structor.py  __init__.py  base_callback.py  cache_provider.py  execution_utils.py  logging.py  prompt_loader.py  token_usage_repository.py
aiecs/ws/: socket_server.py
app/: main.py
app/api/: graph_router.py  service_dispatcher.py  stream_router.py  task_router.py  user_token.py
app/config/: config.py  registry.py
app/core/: __init__.py  celery_task_manager.py  config.py  database_manager.py  dsl_processor.py  execution_interface.py  execution_utils.py  executor_metrics.py  operation_executor.py  prompt_loader.py  registry.py  service_executor.py  task_context.py  tool_executor.py  websocket_manager.py
app/llm/: __init__.py  base_client.py  client_factory.py  llm_client.py  openai_client.py  vertex_client.py  xai_client.py
app/rag/: embedding.py  graph_builder.py
app/services/: base_service.py  llm_integration.py  service_executor.py
app/tasks/: worker.py
app/tools/: README.md  __init__.py  base_tool.py  chart_tool.py  classfire_tool.py  db_api.py  embed.py  image_tool.py  rag.py  report_tool.py  scraper_tool.py  search_api.py  stats_tool.py  vector_search.py
app/ws/: socket_server.py
config/multi_task/: agent_list.yaml  domain_list.yaml  framework.yaml  llm_binding.yaml  prompts.yaml  tasks.yaml
developer_sample/: base_agent.py  master_controller_v2.py
docker/deploy/: .env.example  docker-compose.yml
docker/temporal-memory/: .env.example  README.md  docker-compose.yml
docs/: .gitignore  APISOURCE_EXPANSION_RECOMMENDATIONS.md  APISOURCE_OPTIMIZATION_ANALYSIS.md  MAINTENANCE.md  PROJECT_SUMMARY.md  README.md  SEARCH_TOOL_OPTIMIZATION_ANALYSIS.md  USAGE_GUIDE.md  changelog.rst  check_documentation.py  check_results.txt  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/APPLICATION/: OPERATION_EXECUTOR.md
docs/CONFIG/: CONFIG_MANAGEMENT.md  SERVICE_REGISTRY.md
docs/CORE/: STORAGE_INTERFACES.md
docs/DOMAIN_AGENT/: AGENT_INTEGRATION.md  API_REFERENCE.md  COLLABORATION.md  COMPRESSION_GUIDE.md  ERROR_RECOVERY.md  EXAMPLES.md  FAQ.md  LEARNING.md  MASTERCONTROLLER_MIGRATION.md  MIGRATION_GUIDE.md  OBSERVATION_REASONING.md  PARALLEL_TOOL_EXECUTION.md  PERFORMANCE_MONITORING.md  README.md  STREAMING.md  TOOL_CACHING.md  TOOL_OBSERVATION.md  UPGRADE_GUIDE.md
docs/DOMAIN_COMMUNITY/: ARCHITECTURE.md  INDEX.md
docs/DOMAIN_CONTEXT/: CONTENT_ENGINE.md  CONVERSATION_MODELS.md
docs/DOMAIN_TASK/: TASK_CONTEXT.md  TASK_MODELS.md
docs/INFRASTRUCTURE_MESSAGEING/: CELERY_TASK_MANAGER.md  WEBSOCKET_MANAGER.md
docs/INFRASTRUCTURE_MONITORING/: GLOBAL_METRICS_MANAGER.md  TRACING_MANAGER.md
docs/LLM/: BASE_LLM_CLIENT.md  (+2 more)
examples/: README_SEARCH_TOOL.md  advanced_editing_example.py  agent_integration_demo.py  ai_orchestrator_enhancement_demo.py  apisource_all_providers_demo.py  apisource_caching_demo.py  apisource_provider_operations_demo.py  apisource_tool_examples.py  checkpointer_example.py  cloud_storage_document_example.py  comprehensive_document_creation_example.py  document_processing_example.py  document_writer_precise_editing.py  document_writing_example.py  hybrid_agent_long_text_example.py  langchain_agent_tool_integration.py  langchain_react_integration.py  llm_config_example.py  llm_vision_example.py  multiple_system_prompts_example.py  openlibrary_example.py  openrouter_example.py  scraper_stealth_demo.py  search_tool_demo.py  search_tool_intelligent_caching_demo.py  secedgar_enhanced_demo.py  simple_agent_demo.py  test_adapter_compatibility.py  tool_configuration_examples.py  ttl_strategy_mock_demo.py
openspec/: project.md
scripts/: README.md  README_KAG_IMPORT_UPDATE.md  README_YAML_CONFIG_MANAGEMENT.md  dependency_checker.py  dependency_report.txt  fix_weasel_validator.py  kag_update_config.json  move_yaml_configs.py  rename_kag_imports.py  start_project.sh  update_kag_imports.py  validate_l3_compression_e2e.py  verify_token_tracking.py
test/: README.md  conftest.py
test file/: conftest.py
(+2150 files in other folders)
